# DieselDex_v1core

./: Cargo.toml  Forc.toml  README.md  fuel-toolchain.toml
contracts/diesel_amm_contract/: Cargo.toml  Forc.toml
contracts/diesel_amm_contract/src/: main.sw  proxy-contract.sw
contracts/diesel_amm_contract/tests/: harness.rs
contracts/diesel_amm_contract/tests/functions/: burn.rs  create_pool.rs  mint.rs  swap.rs
contracts/diesel_amm_contract/tests/utils/: mod.rs
contracts/diesel_amm_proxy/: Cargo.toml  Forc.toml
contracts/diesel_amm_proxy/src/: interface.sw  main.sw
contracts/diesel_amm_proxy/tests/: harness.rs
contracts/diesel_amm_proxy/tests/functions/: access_control.rs  initialization.rs  mod.rs  proxy_upgrade.rs
contracts/diesel_amm_proxy/tests/utils/: assertions.rs  mod.rs  setup.rs
contracts/diesel_validation_hook/: Forc.toml
contracts/diesel_validation_hook/src/: main.sw
contracts/lp_rewards_hook/: Cargo.toml
contracts/lp_rewards_hook/src/: main.sw
contracts/lp_rewards_hook/tests/: Cargo.toml  harness.rs
contracts/mocks/mock_token/: Forc.toml
libraries/interfaces/: Forc.toml
libraries/interfaces/src/: diesel_amm.sw  errors.sw  events.sw  lib.sw  lp_rewards_hook.sw
libraries/math/: Forc.toml
libraries/utils/: Forc.toml
test-harness/: Cargo.toml
test-harness/src/: data_structures.rs  interface.rs  lib.rs  paths.rs  setup.rs  types.rs
