[workspace.package]
name = "diesel-v1-core"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "3"
members = ["./contracts/diesel_amm_contract", "./test-harness", "./contracts/diesel_amm_proxy"] 
   
   



[workspace.dependencies]
fuels = { version = "0.66.5", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
