[package]
name = "diesel_amm_contract"
version.workspace = true
edition.workspace = true

[dependencies]
test-harness = { path = "../../test-harness" }
fuels = { workspace = true }
tokio = { workspace = true }
fuel-core = { workspace = true }
fuel-core-client = { workspace = true }

[[test]]
harness = true
name = "tests"
path = "tests/harness.rs"
