# In /contracts/diesel_amm_proxy/Cargo.toml
[package]
name = "diesel_amm_proxy"
version.workspace = true
edition.workspace = true

[dependencies]
fuels = { workspace = true }
tokio = { workspace = true }
fuel-core = { workspace = true }
fuel-core-client = { workspace = true }


[dev-dependencies]
tokio = { version = "1.12", features = ["rt", "macros"] }


[[test]]
harness = true
name = "proxy_tests"
path = "tests/harness.rs"
