
[package]
name = "lp_rewards_hook"
version = "0.1.0"
edition = "2021"

[workspace] # Makes this a standalone package

[dependencies]
fuels = { version = "0.66.6", features = ["fuel-core-lib"] }


[dev-dependencies]
tokio = { version = "1.12", features = ["rt", "macros"] }


[[test]]
harness = true
name = "proxy_tests"
path = "tests/harness.rs"
