[package]
name = "lp_rewards_hook-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
fuels = { version = "0.35", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
fuels-abigen-macro = "0.35"

[lib]
path = "harness.sw"

[[test]]
harness = true
name = "integration_tests"
path = "harness.sw"
